<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"
        android:visible="false"/>

    <item
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"
        android:visible="false"/>

    <item
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:menuCategory="secondary"
        android:visible="false"/>

    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_dialog_info"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:menuCategory="secondary"
        android:visible="false"/>
</menu>
